anime.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,700&display=swap');

html{
  scroll-behavior: smooth;
zoom: 90%;
}

  
* {
margin: 0;
padding: 0;
box-sizing: border-box;
font-family: 'roboto', sans-serif;
}

li{
  list-style-type: none;

}

section{
  background-color: #f0eef4;
}

.title{
  font-size:120px ;
  margin-bottom: 12px;
  text-align: left;
  line-height: 1;
}


p{
  line-height: 1.5;
  font-size: 16px;
}

a{
  text-decoration: none;

}


.click:hover{
transform: scale(1.1);    
}
.click:active{
  transform: scale(0.8);
}

.click{
  transition: all 300ms ease;
  cursor: pointer;
}

button{
  cursor: pointer;
}

section{
  transition: all 300ms ease;
}

.container{
  padding: 50px;
  width: 100%;
}
.row{
  width: 100%;
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 12px;
}

.link__hover-effect{
  position: relative;
}

.link__hover-effect:after{
content: '';
position: absolute;
bottom: -3px;
height: 3px;
width: 0%;
left: 0;
background-color: #000000;
transition: all ease 300ms ;

}




.link__hover-effect:hover:after{
left: 0;
width: 100%;
}

.underline{
  text-decoration: underline;
}


input, textarea{
width: 100%;
background-color: #242424;
color: #fff;
outline: none;
border: 1px solid #c0c4cc;
border-top:none ;
border-left: none;
border-right: none;
height: 40px;

}


nav,
.scroll,
.header{
  opacity: 1;
  visibility: visible;
  transition: all 600ms 400ms;
}

.justify__space--between{
    justify-content: space-between;
    padding: 10px;
    margin: 3px;
    display: flex;
    align-items: center;
}

/* NAVIGATION BAR */

nav {
    height: 100px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between !important;
    align-items: center;
    padding: 0 12px;
  }
  
  .nav__link--list {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;

  }
  
  .nav__link--anchor {
    margin: 0 12px;
    padding: 0 auto 10px;
    color: #242424;
    font-weight: 500;
    font-size: 24px;
  }
  
  .nav__link--anchor-primary {
    background-color: #cb99c9;
     font-weight: 500;
    font-size: 24px;
    padding: 8px 20px;
    border-radius: 50px;
    color: white;
    transition: all 300ms ease;


  }
  
  .nav__link--anchor-primary:hover {
    background-color: #bd72b8;
  }
  
  .nav__link--anchor:hover {
    color: #bd72b8;
  }

  .nav__logo {
    /* font-size: 24px;
    color: #242424;
    margin: 0 12px;
    font-weight: bold; */
    animation: tada 1050ms ;
    transition: all ease;
   

  }


  .logo__picture{
    height: 6.5rem;
    width: 12rem;
  }

  .nav__li{
    padding: 0  10px;
    margin: 0 30px;
  }


.navbar__logo{
    position: absolute;
    display: flex;
    left: 30px;
}

.navbar__links--container{
    position: absolute;
    right: 172px;
    margin-left: 332px;
    margin-right: 48px;
    padding: 0 auto 12px;

}


.container__nav{
    width: 100%;    
    margin-left: 152px;
    padding: 0 16px;
    padding-left: 24px;
    display: flex;
    justify-content: flex-end;

}   




  /*
   FINDER
   */

   .main__header{
    font-size: 35px;
    text-align: center;
    font-weight: 900;
    color: #bd72b8;
    animation: fade-up 1300ms;

   }

   .main__subheader{
    font-size: 35px;
    text-align: center;
    font-weight: 500;
    color: #242424;

   }

   .highlight{
    color: #bd72b8;
    animation: fade-in 4500ms;
   }

   .finder__input{
    background-color: #fff;
    border-radius: 20px;
    color: #0a1f44;
    display: inline-block;
    height: 70px;
    line-height: 40px;
    outline: none;
    padding: 0 15px;
    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
    width: 100%;
    font-size: 24px;
    padding-left: 25px;

}
.finder__input--holder{
    justify-content: center;

}
   .finder__search
   {
    width: 95px;
    height: 95px;
background-color: #e5aee1;
    margin-left: 20px;
    font-size: 30px;
    color: #fff;
    border-radius: 75%;
    display: inline-block;
    margin-top: 20px;
 position: absolute;
 right: 70px;
 animation: float 1500ms infinite ease-in-out ;
 transition:all .3s ease;
 border: 2.5px dashed #0a1f44;

   }

   .finder__search:hover{
    background-color: antiquewhite;
    
   }

/* quote display */

.movie__heading{
    font-size: 35px;
    text-align: center;
    font-weight: 900;
    color: #242424;
    padding-bottom: 28px;
}





   /* chibis */

   .chibi__container{

    justify-content: space-evenly;
    padding: 10px;
    padding-top: 10px;
    max-width: 100%;
    display: flex;


   }

   .chibi__inner{
    width: 50%;
    justify-content: space-evenly;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;


   }
   .goku__pic{
    height: 16rem ;
    width: 11.5rem;
    animation: chibi__float 3000ms infinite ease-in-out ;
    margin:  15px 10px ;
}

   .naruto__pic{
    height: 16rem ;
    width: 11rem;
    animation: chibi__float  2550ms infinite ease-in-out ;
    margin:  15px 10px ;

   }

   .luffy__pic{
    height: 16rem;
    width: 11rem;
    animation: chibi__float 3150ms infinite ease-in-out ;
    margin:  15px 10px ;
    right: 10px;

   }

   .gotg__pic{
    height: 16rem ;
    width: 11.5rem;
    animation: chibi__float  2550ms infinite ease-in-out ;
    margin:  15px 10px ;

}

   .fast__pic{
    height: 16rem ;
    width: 11rem;
    animation: chibi__float 4000ms infinite ease-in-out ;
    margin:  15px 10px ;

   }

   .transformers__pic{
    height: 16rem;
    width: 11rem;
    animation: chibi__float 3000ms infinite ease-in-out ;
    margin:  15px 10px ;
   }

   .post{
    border: 4px solid #242424;
    background-color: #dacbd9;
    margin: 20px;
    text-align: center;
    font-weight: 500;
    margin: 8px;
    font-size: 14px;

   }
    .post__title{
        font-size: 13px;
        padding: 0 5px;
    }
   
    
/* animatoins */





@keyframes tada {

    30% {
      transform: scale(1.1);
      rotate: 12deg;
    }
    50% {
      transform: scale(1.3);
      rotate: -12deg;
    }
    70% {
        transform: scale(1.1);
        rotate: 8deg;
      }
      100% {
        transform: scale(1);
      }
  } 


  @keyframes fade-up {
    0% {
      opacity: 0;
      transform: translateY(40px);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }

  @keyframes fade-in {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  @keyframes float {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-7px);
    }
    100% {
        transform: translateY(0px);
    }
  }

  @keyframes chibi__float {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-12px);
    }
    100% {
        transform: translateY(0px);
    }
  }

  
  @keyframes random_color{

        30% {     
          color: rgb(247, 115, 137);   
        }   
        45% {     
          color: rgb(239, 239, 108);   
        } 
        65% {     
            color: rgb(92, 170, 123);   
          } 
        85% {
          color: rgb(76, 76, 255);
         }
           100%{
            color: white;   
           }
  }

